--- a/Makefile.config
+++ b/Makefile.config
@@ -1,8 +1,10 @@
+# Tweaked Makefile.config for building MNC's custom Caffe.
+
 ## Refer to http://caffe.berkeleyvision.org/installation.html
 # Contributions simplifying and improving our build system are welcome!
 
 # cuDNN acceleration switch (uncomment to build with cuDNN).
-USE_CUDNN := 1
+# USE_CUDNN := 1
 
 # CPU-only switch (uncomment to build without GPU support).
 # CPU_ONLY := 1
@@ -35,7 +37,11 @@ CUDA_DIR := /site/opt/cuda/8.0.44/x64
 CUDA_ARCH := -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
-		-gencode arch=compute_50,code=compute_50
+		-gencode arch=compute_50,code=compute_50 \
+		-gencode arch=compute_60,code=sm_60 \
+		-gencode arch=compute_61,code=sm_61 \
+		-gencode arch=compute_61,code=compute_61
+
 
 # BLAS choice:
 # atlas for ATLAS (default)
